solve the timeline disappearing on safari

--- a/css/style.css
+++ b/css/style.css
@@ -618,6 +618,15 @@ iframe {
   /*background-color: :white;*/ /*new*/
   /*opacity:0;*/ /*new*/
 }
+
+#timeline-barre #timeline-background{
+  background-color:white;
+  width:100%;
+  height:100%;
+  opacity:0;
+}
+
+
 .extended #timeline-barre{
   left: 0px;
   width:100%;
